Updated code updated Kyori adventure-platform-bukkit to 4.4.0 updated Kyori adventure-text-minimessage to 4.21.0 updated HikariCP to 6.3.0 and changed to provided in pom changed Minecraft version from 1.16 to 1.16.5 updated Auraskills from 2.3.3 to 2.3.5 updated code for Vault hook updated Mariadb.jdbc 3.0.3 to 3.5.8 updated Oracle.database.jdbc 21.4.0.0.1 to 23.26.1.0.0